// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<EmailVerification /> should render correctly - index 1`] = `
<div>
  <div
    class="sc-fEXmlR lhvDzD page-containerstyles__StyledPageContainer-sc-19l7k4-0"
    width="default"
  >
    <div
      class="sc-bqWxrE VcTDu"
    >
      <h1
        class="sc-eDvSVe fsBEuM sc-jrcTuL ewlzmZ"
      >
        Confirming email
      </h1>
    </div>
    <div
      class="sc-bjfHbI hfJucn"
    >
      <div
        class="sc-idXgbr dDyhUU"
      />
      <div
        class="sc-idXgbr cJudeM"
      />
      <div
        class="sc-idXgbr laJIBn"
      />
      <div
        class="sc-idXgbr flJxVG"
      />
      <div
        class="sc-idXgbr iZRdcR"
      />
      <div
        class="sc-idXgbr ipjXZc"
      />
      <div
        class="sc-idXgbr gwrBfQ"
      />
      <div
        class="sc-idXgbr ClXgc"
      />
    </div>
  </div>
</div>
`;

exports[`<EmailVerification /> should render correctly with initial state 1`] = `
<div>
  <div
    class="sc-fEXmlR lhvDzD page-containerstyles__StyledPageContainer-sc-19l7k4-0"
    width="default"
  >
    <div
      class="sc-bqWxrE VcTDu"
    >
      <h1
        class="sc-eDvSVe fsBEuM sc-jrcTuL ewlzmZ"
      >
        Confirming email
      </h1>
    </div>
    <div
      class="sc-bjfHbI hfJucn"
    >
      <div
        class="sc-idXgbr dDyhUU"
      />
      <div
        class="sc-idXgbr cJudeM"
      />
      <div
        class="sc-idXgbr laJIBn"
      />
      <div
        class="sc-idXgbr flJxVG"
      />
      <div
        class="sc-idXgbr iZRdcR"
      />
      <div
        class="sc-idXgbr ipjXZc"
      />
      <div
        class="sc-idXgbr gwrBfQ"
      />
      <div
        class="sc-idXgbr ClXgc"
      />
    </div>
  </div>
</div>
`;

exports[`<EmailVerification /> should render correctly with user 1`] = `
<div>
  <div
    class="sc-fEXmlR lhvDzD page-containerstyles__StyledPageContainer-sc-19l7k4-0"
    width="default"
  >
    <div
      class="sc-bqWxrE VcTDu"
    >
      <h1
        class="sc-eDvSVe fsBEuM sc-jrcTuL ewlzmZ"
      >
        Email confirmed
      </h1>
    </div>
    <span
      class="sc-hBxehG jiKGja"
    >
      Thank you for confirming your email address
    </span>
    <div
      class="sc-bjfHbI hfJucn"
    >
      <div
        class="sc-idXgbr dDyhUU"
      />
      <div
        class="sc-idXgbr cJudeM"
      />
      <div
        class="sc-idXgbr laJIBn"
      />
      <div
        class="sc-idXgbr flJxVG"
      />
      <div
        class="sc-idXgbr iZRdcR"
      />
      <div
        class="sc-idXgbr ipjXZc"
      />
      <div
        class="sc-idXgbr gwrBfQ"
      />
      <div
        class="sc-idXgbr ClXgc"
      />
    </div>
  </div>
</div>
`;

exports[`<EmailVerification /> should render correctly with verifyError 1`] = `
<div>
  <div
    class="sc-fEXmlR lhvDzD page-containerstyles__StyledPageContainer-sc-19l7k4-0"
    width="default"
  >
    <div
      class="sc-bqWxrE VcTDu"
    >
      <h1
        class="sc-eDvSVe fsBEuM sc-jrcTuL ewlzmZ"
      >
        Confirming email
      </h1>
    </div>
    <div
      class="sc-bjfHbI hfJucn"
    >
      <div
        class="sc-idXgbr dDyhUU"
      />
      <div
        class="sc-idXgbr cJudeM"
      />
      <div
        class="sc-idXgbr laJIBn"
      />
      <div
        class="sc-idXgbr flJxVG"
      />
      <div
        class="sc-idXgbr iZRdcR"
      />
      <div
        class="sc-idXgbr ipjXZc"
      />
      <div
        class="sc-idXgbr gwrBfQ"
      />
      <div
        class="sc-idXgbr ClXgc"
      />
    </div>
    <span
      class="sc-hBxehG jiKGja"
    >
      <span
        class="sc-fnGiBr fmcxCo"
      >
        Something went wrong whilst confirming your email
        <br />
        Invalid verification link
      </span>
    </span>
  </div>
</div>
`;

exports[`<EmailVerification /> should render correctly with verifying=true 1`] = `
<div>
  <div
    class="sc-fEXmlR lhvDzD page-containerstyles__StyledPageContainer-sc-19l7k4-0"
    width="default"
  >
    <div
      class="sc-bqWxrE VcTDu"
    >
      <h1
        class="sc-eDvSVe fsBEuM sc-jrcTuL ewlzmZ"
      >
        Confirming email
      </h1>
    </div>
    <div
      class="sc-bjfHbI hfJucn"
    >
      <div
        class="sc-idXgbr dDyhUU"
      />
      <div
        class="sc-idXgbr cJudeM"
      />
      <div
        class="sc-idXgbr laJIBn"
      />
      <div
        class="sc-idXgbr flJxVG"
      />
      <div
        class="sc-idXgbr iZRdcR"
      />
      <div
        class="sc-idXgbr ipjXZc"
      />
      <div
        class="sc-idXgbr gwrBfQ"
      />
      <div
        class="sc-idXgbr ClXgc"
      />
    </div>
  </div>
</div>
`;
